--- a/apps/jotai-react/package.json
+++ b/apps/jotai-react/package.json
@@ -12,13 +12,13 @@
   },
   "dependencies": {
     "@faker-js/faker": "^7.6.0",
+    "@panosse/tailwind-config": "*",
     "jotai": "^2.0.2",
     "jotai-optics": "^0.3.0",
     "optics-ts": "^2.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "zod": "^3.20.6",
-    "@panosse/tailwind-config": "*"
+    "zod": "^3.20.6"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
