--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "format": "prettier --write \"**/*.{js,cjs,mjs,ts,tsx,md,json}\" --ignore-path .gitignore",
     "lint": "turbo lint && manypkg check",
     "lint:fix": "turbo lint:fix && manypkg fix",
+    "test": "turbo run test",
+    "test:watch": "turbo run test:watch",
     "type-check": "turbo type-check"
   },
   "dependencies": {
