💚 (zod-changeset): Fix failing linting task

--- a/turbo.json
+++ b/turbo.json
@@ -16,7 +16,7 @@
     },
     "build": {
       "dependsOn": ["^build", "^db:generate"],
-      "outputs": [".next/**", ".expo/**"]
+      "outputs": [".next/**", ".expo/**", "dist/**"]
     },
     "lint": {},
     "lint:fix": {},
