--- a/packages/zod-changeset/tsconfig.json
+++ b/packages/zod-changeset/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "extends": "../../tsconfig.json",
   "include": ["src", "vitest.config.ts"],
-  "exclude": ["dist"],
+  "exclude": ["dist", "node_modules"],
   "compilerOptions": {
     "types": ["vitest/importMeta"],
     "noEmit": true,
